banner1 section done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="btn">Shop Now</button>
             </div>
             <div class="banner-pic">
-                <img class="img" src="./Flower Asset/pngwing 10.png">
+                <img class="banner-img" src="./Flower Asset/pngwing 10.png">
             </div>
         </div>
     </header>
@@ -61,6 +61,19 @@
                      </div>
                  </div>
 
+        </section>
+        <!-- section 2 -->
+        <section>
+            <div class="banner1">
+                <div class="banner1-content">
+                    <h1 class="colour">Hot Deal ! Sale Up To 25% <span class="span-colour">Off</span></h1>
+                    <p class="paragraph-colour">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                    <button class="sign-btn">Sign Up</button>
+                </div>
+                <div class="banner1-picture">
+                    <img src="Flower Asset/pngwing 8.png">
+                </div>
+            </div>
         </section>
         
     </main>
