--- a/index.html
+++ b/index.html
@@ -75,7 +75,21 @@
                 </div>
             </div>
         </section>
-        
+        <!-- instagram section -->
+        <section>
+            <div class="instagram-section">
+                <div class="instagram">
+                    <h1 class="insta-heading">Instagram</h1>
+                    <p class="insta-paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                </div>
+                <div class="flowers">
+                    <img src="Flower Asset/Rectangle 4.png">
+                    <img src="Flower Asset/Rectangle 5.png">
+                    <img src="Flower Asset/Rectangle 6.png">
+                    <img src="Flower Asset/Flower 01.png">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
